  . Added support for reading csv and skipping empty lines in SplFileObject.
  . Added CachingIterator::TOSTRING_USE_INNER, calls inner iterator __toString.
- Improved xmlReader: (Rob)
  . Added readInnerXml(), xmlReader::setSchema().
  . Added readInnerXML(), readOuterXML(), readString(), setSchema(). (2.6.20+)
  . Changed to passing libxml options when loading reader.

- Added posix_initgroups() function. (Ilia)
- Added an optional parameter to parse_url() to allow retrieval of distinct URL
  components. (Ilia)
- Added optional parameter to http_build_query() to allow specification of
  string separator. (Ilia)
- Added image_type_to_extension() function. (Hannes, Ilia)
- Added allow_url_include ini directive to complement allow_url_fopen. (Rasmus)
- Added automatic module globals management. (Dmitry)
- Added RFC2397 (data: stream) support. (Marcus)
- Added new error mode E_RECOVERABLE_ERROR. (Derick, Marcus, Tony)
- Added support for getenv() input filtering. (Rasmus)
- Added support for constructors in interfaces to force constructor signature
  checks in implementations. (Marcus)
- Added memory_get_peak_usage() function for retrieving peak memory usage of
  a PHP script. (Ilia)
- Added pg_field_table() function. (Edin)
- Added SimpleXMLElement::saveXML() as an alias for SimpleXMLElement::asXML().
  (Hannes)

- Optimized zend_try/zend_catch macros by eliminating memcpy(3). (Dmitry)
- Optimized require_once() and include_once() by eliminating fopen(3)
  on second usage. (Dmitry)
- Optimized request shutdown sequence. Restoring ini directives now iterates
  only over modified directives instead of all. (Dmitry)

- Fixed memory leaks in openssl streams context options. (Pierre)
- Fixed handling of extremely long paths inside tempnam() function. (Ilia)
- Fixed bug #38086 (stream_copy_to_stream() returns 0 when maxlen is bigger 
  than the actual length). (Tony)
- Fixed bug #38072 (boolean arg for mysqli_autocommit() is always true on 
  Solaris). (Tony)